# robotic-apple-harvester

./: .gitignore  README.md  requirements.txt
ros_packages/2.Sensor_Matching/: bag_reader.py  camera_info  camera_info_pub.py  depth_info  masks_detection.py  masks_detectionv2.py  masks_detectionv3.py  pcl_creation.py  pcl_to_img.py  pcl_to_imgv2.py  pcl_to_imgv3.py  project_point_to_pixel.py  realsense_d435i_intrinsics.txt  spherical_meshes.py  utils.py  vision_task.py  vision_taskv11.py  vision_taskv12.py  vision_taskv13.py  vision_taskv14.py  vision_taskv2.py  vision_taskv4.py  vision_taskv6.py  vision_taskv9.py
ros_packages/3.Moveit_Task/: pipeline.py  pipelinev10.py  pipelinev11.py  pipelinev3.py  pipelinev5.py  pipelinev7.py  pipelinev8.py  pipelinev9.py  utils.py
ros_packages/apple_pose_srv/: CMakeLists.txt  package.xml
ros_packages/apple_pose_srv/srv/: GetApplePose.srv  GetGrippercmd.srv
ros_packages/kinova_cmd_pose/: CMakeLists.txt  package.xml
ros_packages/kinova_cmd_pose/launch/: kinova_cmd_pose.launch.py
ros_packages/kinova_cmd_pose/src/: apple_to_box.cpp  move_manipulator.cpp  move_manipulator_old.cpp  starting_position.cpp
training/: data.yaml  model_training_optuna.py  training_analysis.py  training_analysis_comparison.py
training/dataset/train/: labels.cache
training/dataset/train/labels/: image1.txt  image10.txt  image2.txt  image3.txt  image4.txt  image5.txt  image6.txt  image7.txt  image8.txt  image9.txt
training/dataset/val/: labels.cache
training/dataset/val/labels/: image481.txt  image482.txt  image483.txt  image484.txt  image485.txt  image486.txt  image487.txt  image488.txt  image489.txt  image490.txt  image491.txt
